--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,8 +2,8 @@
 
 
 body {
-    font-family: 'Roboto', sans-serif;
-    background: #fafafa;
+    font-family: 'Times New Roman', serif;
+    background: #fff;
 }
 
 p {
@@ -15,18 +15,18 @@ p {
 }
 
 .wrapper {
-  display: flex;
-  align-items: stretch;
+    display: flex;
+    align-items: stretch;
 }
 
 #sidebar {
-  min-width: 200px;
-  max-width: 200px;
-  height: 100vh;
+    min-width: 200px;
+    max-width: 200px;
+    height: 100vh;
 }
 
 #sidebar.active {
-  margin-left: -250px;
+    margin-left: -250px;
 }
 
 a, a:hover, a:focus {
@@ -35,28 +35,29 @@ a, a:hover, a:focus {
     transition: all 0.3s;
 }
 .navbar{
-  background: #f3f3f3;
-  color: #000;
+    background: #f3f3f3;
+    color: #000;
+    box-shadow: 2px 0px 21px -10px;
 }
 
 .navbar-brand{
-  width: 200px;
+    width: 200px;
 }
 
 .col-btn{
-  color:#000;
+    color:#000;
 }
 
 #sidebar {
-  background: #f3f3f3;
-  color: #000;
-  transition: all 0.3s;
-  border-right: 1px solid #ddd;
+    background: #f3f3f3;
+    color: #000;
+    transition: all 0.3s;
+    box-shadow: 3px -5px 16px -9px;
 }
 
 #sidebar .sidebar-header {
-  padding: 10px;
-  background: #f3f3f3;
+    padding: 10px;
+    background: #f3f3f3;
 }
 
 #sidebar ul.components {
@@ -64,7 +65,7 @@ a, a:hover, a:focus {
 }
 
 #sidebar ul p {
-   color: #000;
+    color: #000;
     padding: 10px;
 }
 
@@ -74,12 +75,12 @@ a, a:hover, a:focus {
     display: block;
 }
 #sidebar ul li a:hover {
-   color: #000;
+    color: #000;
     background: #fff;
 }
 
 #sidebar ul li.active > a, a[aria-expanded="true"] {
-   color: #000;
+    color: #000;
     background: #fff;
 }
 ul ul a {
@@ -88,6 +89,10 @@ ul ul a {
     background: #fff;
 }
 
+.card{
+
+}
+
 .card-data-view{
-  background: #f3f3f3;
+    background: #fff;
 }
