--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,13 @@ body {
     background: #fff;
 }
 
+.login-div{
+    background: #f3f3f3;
+    border: 1px solid #b9b9b9;
+    border-radius: 10px;
+    box-shadow: 0px 2px 10px -3px;
+}
+
 p {
     font-family: 'Roboto', sans-serif;
     font-size: 1.1em;
@@ -95,6 +102,10 @@ ul ul a {
 
 .card-data-view{
     background: #fff;
+}
+
+.dashboard-data-div{
+    font-size: 60px;
 }
 
 
